plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.3'
	id 'io.spring.dependency-management' version '1.1.3'
}

group = 'fr.paloit'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.mysql:mysql-connector-j'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation group: 'com.docusign', name: 'docusign-esign-java', version: '4.4.0'
	// implementation 'commons-cli:commons-cli:1.5.0'
	//implementation 'org.apache.commons:commons-math3:3.6.1'
	//implementation 'com.docusign:docusign-esign-java:4.0.0-RC1'
	// implementation 'commons-io:commons-io:2.11.0'
	implementation 'jakarta.ws.rs:jakarta.ws.rs-api:3.1.0'
	implementation 'org.glassfish.jersey.media:jersey-media-multipart:3.1.0'
	// https://mvnrepository.com/artifact/org.glassfish.jersey.core/jersey-clienty
	implementation group: 'org.glassfish.jersey.core', name: 'jersey-client', version: '3.1.3'
	// https://mvnrepository.com/artifact/org.glassfish.jersey.core/jersey-common
	implementation group: 'org.glassfish.jersey.core', name: 'jersey-common', version: '3.1.3'
	// https://mvnrepository.com/artifact/jakarta.inject/jakarta.inject-api
	implementation group: 'jakarta.inject', name: 'jakarta.inject-api', version: '2.0.1'
	// https://mvnrepository.com/artifact/org.glassfish.jersey.media/jersey-media-json-jackson
	implementation group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: '3.1.3'
	// https://mvnrepository.com/artifact/org.apache.oltu.oauth2/org.apache.oltu.oauth2.client
	implementation group: 'org.apache.oltu.oauth2', name: 'org.apache.oltu.oauth2.client', version: '1.0.2'
	// https://mvnrepository.com/artifact/com.auth0/java-jwt
	implementation group: 'com.auth0', name: 'java-jwt', version: '4.4.0'
	// https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk16
	implementation group: 'org.bouncycastle', name: 'bcprov-jdk16', version: '1.46'
	// https://mvnrepository.com/artifact/org.glassfish.jersey.ext/jersey-entity-filtering
	implementation group: 'org.glassfish.jersey.ext', name: 'jersey-entity-filtering', version: '3.1.3'
	// https://mvnrepository.com/artifact/org.jvnet.mimepull/mimepull
	implementation group: 'org.jvnet.mimepull', name: 'mimepull', version: '1.10.0'
	// HSQLDB
	implementation group: 'org.hsqldb', name: 'hsqldb', version: '2.7.1'

	testImplementation 'org.jsoup:jsoup:1.14.3'

}

tasks.named('test') {
	useJUnitPlatform()
}

def configurations = ['ci', 'dev']

tasks.register("configs") {
	group = "help"
	description = "Liste des profils disponibles"
	doFirst {
		println "Liste des profils disponibles: $configurations"
	}
}

configurations.forEach {
	conf -> tasks.register("bootRun$conf") {
		group = "application"
		description = "Lancement de l'application Spring boot avec le profil '$conf'"
		doFirst {
			tasks.bootRun.configure {
				systemProperty("spring.profiles.active", "$conf")
				systemProperty("spring.sql.init.platform", "$conf")
			}
		}
		finalizedBy("bootRun")
	}
}


